# dossier-platform

./: .env.example  .gitignore  AGENTS.md  LEARNING.md  README.md  docker-compose.yml  requirements.txt  run_demo.py
.devcontainer/: devcontainer.json
backend/: Dockerfile  pyproject.toml  run_demo.py
backend/alembic/: env.py
backend/alembic/versions/: b0a8331ddd02_p01_full_data_model.py  f7cb45e435e4_p02_user_table.py
backend/app/: main.py
backend/app/api/: deps.py  errors.py  loading.py
backend/app/api/routers/: auth.py  nested.py  product_children.py  products.py  projects.py
backend/app/core/: config.py  db.py  security.py
backend/app/models/: __init__.py  active_ingredient.py  base.py  batch_formula.py  clinical.py  enums.py  excipient.py  manufacturer.py  packaging.py  product.py  project.py  sequence.py  stability.py  user.py
backend/app/schemas/: __init__.py  active_ingredient.py  base.py  batch_formula.py  clinical.py  excipient.py  manufacturer.py  packaging.py  product.py  project.py  sequence.py  stability.py  user.py
backend/app/seed/: examox.py  lamox.py
backend/app/templating/: section_map.py
backend/app/validation/: engine.py  rules.py
backend/scripts/: init-pgvector.sql  seed_demo.py
backend/tests/: conftest.py  test_auth_api.py  test_health.py  test_migration.py  test_products_api.py  test_projects_api.py  test_seed_demo.py  test_validation.py
prompts/: 00-repo-scaffold.md  01-data-model.md  02-backend-api.md  03-knowledge-base-rag.md  04-template-engine.md  05-ai-narrative.md  06-validation-engine.md  08-ctd-folder-builder.md  (+5 more)
(+13 files in other folders)
